# platform_api

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
app/: CMakeLists.txt
docs/: Webpage_requirements.odt
interfaces/: power_mon_if.h  relay_if.h  timer_if.h
main/: CMakeLists.txt  ap_server.c  ap_server.h  controller.c  controller.h  main.c  platform_ap_server.c  platform_ap_server.h  platform_plug_server.c  platform_plug_server.h  platform_relay.c  platform_relay.h  platform_wifi_client.c  platform_wifi_client.h  plug_server.c  plug_server.h  relay.c  relay.h  util.c  util.h  wifi_module.c  wifi_module.h
modules/: ACS_module.c  ACS_module.h  MCP7940.c  MCP7940.h
test_server/: app.js  package-lock.json
webpages/: dashboard.html  plug_control.html  root.html  success.html
