
idf_component_register(SRCS "main.c" 
                            "wifi_module.c" 
                            "plug_server.c" 
                            "relay.c" 
                            "util.c" 
                            "ap_server.c" 
                            "controller.c" 
                    EMBED_FILES ../webpages/root.html ../webpages/plug_control.html)